# modular-esp-idf-rs

./: Cargo.toml  README.md
crates/build-utils/: Cargo.toml
crates/build-utils/src/: lib.rs
crates/kconfparse/: Cargo.toml
crates/kconfparse/src/: kconfig.pest  lib.rs
